--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -121,7 +121,7 @@
 
     <string name="register_sms_one_time">ডোনেট লাইফ আপনার মোবাইল আপনার পরীক্ষা করে কেবল নিবন্ধন হয়েছে কিনা দেখতে।</string>
     <!--  -->
-    <string name="register_phone_number_code_confirm">অনুগ্রহ করে আপনার দেশের কোড নিশ্চিত করুন এবং আপনার মোবাইল নম্বর দিন। আপনার নম্বরটি নিবন্ধিত না হলে সংকেতের ঘরটি খালি রাখুন।</string>
+    <string name="register_phone_number_code_confirm">অনুগ্রহ করে আপনার দেশের কোড নিশ্চিত করুন এবং আপনার মোবাইল নম্বর দিন।</string>
     <string name="blood_feed">ব্লাড ফিড</string>
     <string name="blood_request">রক্তের জন্যে আবেদন</string>
     <string name="profile">প্রোফাইল</string>
