--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,7 +133,7 @@
     <!--  -->
     <string name="register_sms_one_time">Donate Life checks your mobile number to verify your registration.</string>
     <!--  -->
-    <string name="register_phone_number_code_confirm">Please confirm your country code and enter your phone number.If you are not registered put the password field blank</string>
+    <string name="register_phone_number_code_confirm">Please confirm your country code and enter your phone number</string>
     <string name="blood_feed">Blood Feed</string>
     <string name="blood_request">Request Blood</string>
     <string name="profile">Profile</string>
