--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,9 @@
     <!--  -->
     <string name="log_in">Log In</string>
     <!--  -->
+    <string name="sign_up">Sign Up</string>
+
+    <!--  -->
     <string name="refresh">refresh</string>
 
     <!--  -->
