--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -129,6 +129,7 @@
     <string name="profile">প্রোফাইল</string>
     <string name="hospital">হাসপাতাল</string>
     <string name="loading">লোড হচ্ছে...</string>
+    <string name="availability">আইডি প্রাপ্যতা দেখা হচ্ছে\.\.\.</string>
     <string name="delete_request">মুছে ফেলার অনুরোধ</string>
     <string name="progressing">কাজ হচ্ছে...</string>
 
