--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -63,6 +63,9 @@
     <string name="confirm_password">নিশ্চিত সংকেত</string>
     <!--  -->
     <string name="confirm">নিশ্চিত করুন</string>
+    <!--  -->
+    <string name="registration">নিবন্ধিত করুন</string>
+
 
     <!--  -->
     <string name="register_name_first">প্রথম নাম</string>
@@ -129,6 +132,9 @@
     <string name="register_phone_number_code_confirm">অনুগ্রহ করে আপনার দেশের কোড নিশ্চিত করুন এবং আপনার মোবাইল নম্বর দিন।</string>
     <!--  -->
     <string name="register_password_confirm">আপনার আইডিটির জন্যে সংকেতটি দিন.</string>
+    <string name="district_confirm">আপনার এলাকাটি নিশ্চিত করুন।</string>
+
+    <string name="blood_group_confirm">আপনার রক্তের গ্রুপটি নিশ্চিত করুন।</string>
 
     <string name="blood_feed">ব্লাড ফিড</string>
     <string name="blood_request">রক্তের জন্যে আবেদন</string>
