--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -142,7 +142,8 @@
     <!--  -->
     <string name="register_phone_number_code_confirm">অনুগ্রহ করে আপনার দেশের কোড নিশ্চিত করুন এবং আপনার মোবাইল নম্বর দিন।</string>
     <!--  -->
-    <string name="register_password_confirm">আপনার আইডিটির জন্যে সংকেতটি দিন.</string>
+    <string name="register_password_confirm">আপনার আইডিটির জন্যে সংকেতটি দিনঃ</string>
+    <string name="register_name_confirm">আপনার পুর্ণ নাম:</string>
     <string name="district_confirm">আপনার এলাকাটি নিশ্চিত করুন।</string>
 
     <string name="blood_group_confirm">আপনার রক্তের গ্রুপটি নিশ্চিত করুন।</string>
