--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,9 +16,6 @@
 
     <string name="coder_bd">coder.bd</string>
     <string name="coder_bd_email">biswajit.sust@gmail.com</string>
-
-    <string name="about_developer">Developer Team</string>
-
     <!--  -->
     <string name="emergency_text">EMERGENCY</string>
     <!--  -->
@@ -162,7 +159,9 @@
     <!--  -->
     <string name="register_phone_number_code_confirm">Please confirm your country code and enter your phone number</string>
     <!--  -->
-    <string name="register_password_confirm">Enter the password for your id.</string>
+
+    <string name="register_name_confirm">Your Full name:</string>
+    <string name="register_password_confirm">Enter a Password:</string>
     <string name="district_confirm">Select where you live.</string>
 
     <string name="blood_group_confirm">Select your Blood Group.</string>
@@ -209,7 +208,7 @@
     <string name="pref_title_feed_blood_group_filter">Blood Group Filtering</string>
     <string name="pref_title_notification_receive_filter">Push Notification</string>
     <string name="pref_title_notification_vibration">Vibration</string>
-    <string name="pref_title_notification_ringtone">Ringtone</string>
+    <string name="pref_title_notification_ringtone">Notification</string>
     <string name="pref_feed_district_filter">Filter the blood feed by own District</string>
     <string name="pref_feed_blood_group_filter">Filter the blood feed by own Blood Group</string>
     <string name="pref_notification_receive_filter">Receive the notification of blood request</string>
