--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -1,163 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <!--  -->
     <string name="app_name">ডোনেট লাইফ</string>
-    <!--  -->
+    <string name="terms_of_service">সেবার নিয়মাবলী</string>
+    <string name="privacy_policy">গোপনীয়তা সত্ত্ব</string>
+    <string name="usage_policy">ব্যবহার সত্ত্ব</string>
+    <string name="open_source_licenses">ওপেন সোর্স লাইন্সেস</string>
+    <string name="about_developers">ডেভেলোপারদের সম্পর্কে</string>
     <string name="app_version">১.১.১</string>
-    <!--  -->
     <string name="app_info">তথ্য</string>
     <string name="app_copyright">২০১৪ ব্লু প্যান্ডোরা ইন.</string>
-    <!--  -->
     <string name="app_version_code">ভার্সন ১.১.১</string>
-
-    <!--  -->
     <string name="emergency_text">জরুরী</string>
     <string name="emergency_char">E</string>
-    <!--  -->
     <string name="emergency_request">জরুরী সাহায্য</string>
-    <!--  -->
+    <string name="emergency_sms">এসএমএস এর মাধ্যম্যে সাহায্য</string>
     <string name="dummy_name">সিস্টেম</string>
-    <!--  -->
     <string name="dummy_blood_group">প্রয়োজন:</string>
-    <!--  -->
     <string name="blood_group">রক্তের গ্রুপ</string>
-    <!--  -->
     <string name="total_donation">মোট রক্তদান</string>
-
-    <!--  -->
     <string name="Ok">ঠিক আছে</string>
-    <!--  -->
     <string name="log_in">লগ ইন</string>
-    <!--  -->
     <string name="sign_up">সাইন আপ</string>
-
-    <!--  -->
     <string name="refresh_notice">নিচের দিকে টেনে রিফ্রেশ করুন</string>
-    <!--  -->
     <string name="request">রক্তের জন্যে আবেদন</string>
-    <!--  -->
     <string name="profile_details">প্রোফাইল এর বর্ণনা</string>
-    <!--  -->
     <string name="profile_edit">সম্পাদনা</string>
-    <!--  -->
     <string name="password_field">সংকেত</string>
-    <!--  -->
     <string name="plus">+</string>
-    <!--  -->
     <string name="Warning_no_number">মোবাইল নম্বর অবশ্যই দিতে হবে</string>
-    <!--  -->
     <string name="Warning_number_short">সঠিক মোবাইল নম্বর অবশ্যই দিতে হবে</string>
-    <!--  -->
     <string name="Warning_select_a_country">একটি দেশ অবশ্যই নির্বাচিত করতে হবে</string>
-    <!--  -->
     <string name="Warning_enter_a_password">নিবন্ধিত ফোন.সংকেতটি দিন.</string>
-    <!--  -->
     <string name="Warning_must_enter_a_password">সংকেতটি অবশ্যই দিতে হবে.</string>
-    <!--  -->
     <string name="Warning_must_enter_a_first_name">You must Enter your First Name.</string>
-    <!--  -->
     <string name="Warning_must_enter_a_last_name">You must Enter your Last Name.</string>
-    <!--  -->
     <string name="Warning_password_not_matched">সংকেত মেলে নি।</string>
-    <!--  -->
     <string name="Warning_wrong_password">সঠিক সংকেতটি দিন।</string>
-    <!--  -->
     <string name="Warning_remove_the_password">নিবন্ধনের জন্যে সংকেতটি মুছে মেলুন।</string>
-    <!--  -->
     <string name="register_name_info">প্রথম শেষ</string>
-    <!--  -->
     <string name="register_name_last">শেষ নাম</string>
-    <!--  -->
     <string name="register_password">সংকেত</string>
-    <!--  -->
     <string name="confirm_password">নিশ্চিত সংকেত</string>
-    <!--  -->
     <string name="confirm">নিশ্চিত করুন</string>
-    <!--  -->
     <string name="registration">নিবন্ধিত করুন</string>
-
-
-    <!--  -->
     <string name="register_name_first">প্রথম নাম</string>
-    <!--  -->
     <string name="spinner_prompt">দেশ নির্বাচিত করুন</string>
-    <!--  -->
     <string name="dummy_blood_group_ID">A+</string>
-    <!--  -->
     <string name="dummy_hospital_name_ID">ঢাকা মেডিক্যাল হাসপাতাল</string>
-    <!--  -->
     <string name="dummy_blood_amount">পরিমান:</string>
-    <!--  -->
     <string name="dummy_blood_amount_ID">(২ ব্যাগ)</string>
-    <!--  -->
     <string name="dummy_area_name_ID">ঢাকা</string>
-    <!--  -->
     <string name="select_area">যে শহরে রক্ত প্রয়োজন:</string>
-    <!--  -->
     <string name="select_hospital">আপনার হাসপাতালটি নির্বাচিত করুন:</string>
-    <!--  -->
     <string name="select_blood_group">রক্তের গ্রুপ:</string>
-    <!--  -->
     <string name="select_amount">পরিমান:</string>
-    <!--  -->
     <string name="area_name">শহর</string>
-    <!--  -->
     <string name="mobile_number">মোবাইল নম্বর</string>
-    <!--  -->
     <string name="full_name">পুরো নাম</string>
-    <!--  -->
-    <string name="dummy_full_name">Android System</string>
-    <!--  -->
+    <string name="dummy_full_name">এন্ড্রয়েড সিস্টেম</string>
     <string name="dummy_mobile_number_ID">১*********</string>
-    <!--  -->
-
     <string name="dummy_time">১৬ জানুয়ারী ১৯৯৩</string>
-    <!--  -->
     <string name="hello_world">স্বাগতম দুনিয়া!</string>
-    <!--  -->
     <string name="action_settings">বিন্যাস</string>
-    <!--  -->
     <string name="action_delete">বাদ দিন</string>
-    <!--  -->
     <string name="action_delete_own">অনুরোধটি মুছে মেলুন</string>
-
-    <!--  -->
     <string name="action_call">কল:</string>
-    <!--  -->
     <string name="action_sms">এসএমএস পাঠান:</string>
-    <!--  -->
     <string name="action_logout">লগ আউট</string>
-    <!--  -->
     <string name="sample_news_feed">রক্তের ফিডের নমুনা</string>
-    <!--  -->
     <string name="sample_slide_menu">স্লাইড তালিকার নমুনা</string>
-    <!--  -->
     <string name="sample_slide_menu_land">Sample Slide Menu Land</string>
-    <!--  -->
     <string name="sample_news_feed_land">Sample News Feed land</string>
-    <!--  -->
-
     <string name="register_sms_one_time">ডোনেট লাইফ আপনার মোবাইল আপনার পরীক্ষা করে কেবল নিবন্ধন হয়েছে কিনা দেখতে।</string>
-    <!--  -->
     <string name="register_phone_number_code_confirm">অনুগ্রহ করে আপনার দেশের কোড নিশ্চিত করুন এবং আপনার মোবাইল নম্বর দিন।</string>
-    <!--  -->
     <string name="register_password_confirm">আপনার আইডিটির জন্যে সংকেতটি দিনঃ</string>
     <string name="register_name_confirm">আপনার পুর্ণ নাম:</string>
     <string name="district_confirm">আপনার এলাকাটি নিশ্চিত করুন।</string>
-
     <string name="blood_group_confirm">আপনার রক্তের গ্রুপটি নিশ্চিত করুন।</string>
-
     <string name="blood_feed">ব্লাড ফিড</string>
     <string name="blood_request">রক্তের জন্যে আবেদন</string>
     <string name="profile">প্রোফাইল</string>
     <string name="hospital">হাসপাতাল</string>
+    <string name="settings">সেটিংস</string>
+    <string name="feedback">মতামত</string>
+    <string name="about_us">আমাদের সম্পর্কে</string>
     <string name="loading">লোড হচ্ছে...</string>
     <string name="processing">আবেদনটি করা হচ্ছে...</string>
-    <string name="TimeoutError">আবেদনটি সম্পন্ন হয়নি। আপনার ইন্টারনেট কানেকশনটি পুনরায় দেখুন।</string>
-    <string name="NoInternet">আপনার ইন্টারনেট সংযোগটি সচল কিনা লক্ষ্য করুন।</string>
+    <string name="timeout_error">আবেদনটি সম্পন্ন হয়নি। আপনার ইন্টারনেট কানেকশনটি পুনরায় দেখুন।</string>
+    <string name="no_internet">আপনার ইন্টারনেট সংযোগটি সচল কিনা লক্ষ্য করুন।</string>
     <string name="availability">আইডি প্রাপ্যতা দেখা হচ্ছে...</string>
     <string name="delete_request">মুছে ফেলার অনুরোধ</string>
     <string name="progressing">কাজ হচ্ছে...</string>
-
+    <string name="pref_request_feed">ফিড অপশন এবং ফিল্টারিং</string>
+    <string name="pref_notification">নটিফিকেশন অপশন</string>
+    <string name="pref_key_feed_show_limit">%d সংখ্যক ফিড</string>
+    <string name="pref_title_feed_show">ফিড লিমিট</string>
+    <string name="pref_title_feed_district_filter">শহর ফিল্টারিং</string>
+    <string name="pref_title_feed_blood_group_filter">রক্তের গ্রুপ ফিল্টারিং</string>
+    <string name="pref_title_notification_receive_filter">পুশ নটিফিকেশন</string>
+    <string name="pref_title_notification_vibration">ভাইব্রেশন</string>
+    <string name="pref_title_notification_ringtone">নটিফিকেশন</string>
+    <string name="pref_feed_district_filter">নিজ শহর অনুযায়ী ফিড ফিল্টার</string>
+    <string name="pref_feed_blood_group_filter">নিজ রক্তের গ্রুপ অনুসারে ফিল্টার</string>
+    <string name="pref_notification_receive_filter">নতুন রক্তের আবেদন এর নটিফিকেশন গ্রহণ</string>
+    <string name="pref_notification_vibration">নটিফিকেশন রিসিভ এর জন্যে ভাইব্রেশন</string>
+    <string name="pref_notification_ringtone">নটিফিকেশন এর শব্দ</string>
+    <string name="zero_donation_record">কোনো ডনেশন রেকর্ড নেই</string>
+    <string name="one_donation_record">এক বার</string>
+    <string name="other_donation_record">%d বার</string>
+    <string name="zero_bag_request"> </string>
+    <string name="one_bag_request">(এক ব্যাগ)</string>
+    <string name="other_bag_request">(%d ব্যাগ)</string>
+    <string name="zero_grammar_error">০ বার</string>
+    <string name="about_version_bulid_code">ভার্সন ১.১.১ | নির্মান ২০১৪১১২৮</string>
+    <string name="about_usage_policy">ডোনেট লাইফ কেবল পার্সোনাল এবং নন-কমার্সিয়াল ব্যবহারের জন্যে।</string>
+    <string name="about_legal_license">লাইসেন্সের লিগ্যাল তথ্য</string>
+    <string name="name_and_contact">নাম এবং যোগাযোগ</string>
+    <string name="feedback_thank_you">আপনার ফিডব্যাকটির জন্যে ধন্যবাদ</string>
 </resources>
