--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,184 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <!--  -->
     <string name="app_name">Donate Life</string>
-    <!--  -->
+    <string name="terms_of_service">Terms of Service</string>
+    <string name="privacy_policy">Privacy Policy</string>
+    <string name="usage_policy">Usage Policy</string>
+    <string name="open_source_licenses">Open Source Licenses</string>
+    <string name="about_developers">About Developers</string>
     <string name="app_version">1.1.1</string>
-    <!--  -->
     <string name="app_info">Info</string>
     <string name="app_copyright">2014 Blue Pandora Inc</string>
-
-    <!--  -->
     <string name="app_version_code">Version 1.1.1</string>
     <string name="the_doctor">The Doctor</string>
     <string name="the_doctor_email">sajid.sust.cse@gmail.com</string>
-
     <string name="coder_bd">coder.bd</string>
     <string name="coder_bd_email">biswajit.sust@gmail.com</string>
-    <!--  -->
     <string name="emergency_text">EMERGENCY</string>
-    <!--  -->
-    <string name="non_emergency_text"></string>
+    <string name="non_emergency_text"> </string>
     <string name="emergency_char">E</string>
-    <!--  -->
     <string name="emergency_request">EMERGENCY REQUEST</string>
-    <!--  -->
+    <string name="emergency_sms">SMS REQUEST</string>
     <string name="dummy_name">System</string>
-    <!--  -->
     <string name="dummy_blood_group">Required:</string>
-    <!--  -->
     <string name="blood_group">Blood group</string>
-    <!--  -->
     <string name="total_donation">Total Donation</string>
-    <!--  -->
     <string name="Ok">OK</string>
-    <!--  -->
     <string name="log_in">Log In</string>
-    <!--  -->
     <string name="sign_up">Sign Up</string>
-
-    <!--  -->
     <string name="refresh">refresh</string>
-
-    <!--  -->
     <string name="refresh_notice">Pull Down to Refresh</string>
-
-    <!--  -->
     <string name="request">Request for Blood</string>
-
-    <!--  -->
     <string name="profile_details">Profile Details</string>
-    <!--  -->
     <string name="profile_edit">Edit</string>
-
-    <!--  -->
     <string name="password_field">Pass</string>
-    <!--  -->
     <string name="plus">+</string>
-
-    <!--  -->
     <string name="Warning_no_number">You Must Enter a mobile number</string>
-    <!--  -->
     <string name="Warning_number_short">You Must Enter a valid number</string>
-    <!--  -->
     <string name="Warning_select_a_country">You Must select a country</string>
-    <!--  -->
     <string name="Warning_enter_a_password">Registered Phone.Enter Password.</string>
-    <!--  -->
     <string name="Warning_must_enter_a_password">You must Enter Password.</string>
-    <!--  -->
     <string name="Warning_must_enter_a_first_name">You must Enter your First Name.</string>
-    <!--  -->
     <string name="Warning_must_enter_a_last_name">You must Enter your Last Name.</string>
-
-    <!--  -->
     <string name="Warning_password_not_matched">Password Didn\'t Matched.</string>
-    <!--  -->
     <string name="Warning_wrong_password">Enter the right Password.</string>
-
-    <!--  -->
     <string name="Warning_remove_the_password">Remove the password for registration</string>
-    <!--  -->
     <string name="register_name_info">First Last</string>
-    <!--  -->
     <string name="register_name_last">Last Name</string>
-    <!--  -->
     <string name="register_password">Password</string>
-    <!--  -->
     <string name="confirm_password">Confirm Password</string>
-    <!--  -->
+    <string name="edit_password">Password for confirm edit</string>
     <string name="confirm">Confirm</string>
-    <!--  -->
     <string name="registration">Register</string>
-    <!--  -->
     <string name="send_feedback">Send</string>
-    <!--  -->
     <string name="register_name_first">First Name</string>
-    <!--  -->
     <string name="spinner_prompt">Select A Country</string>
-    <!--  -->
     <string name="dummy_blood_group_ID">A+</string>
-    <!--  -->
     <string name="dummy_hospital_name_ID">Dhaka Medical College</string>
-    <!--  -->
     <string name="dummy_blood_amount">Amount:</string>
-    <!--  -->
     <string name="dummy_blood_amount_ID">(2 Bags)</string>
-    <!--  -->
     <string name="dummy_area_name_ID">Dhaka</string>
-    <!--  -->
     <string name="select_area">Blood Required Area:</string>
-    <!--  -->
     <string name="select_hospital">Select Your Hospital Name:</string>
-
-    <!--  -->
     <string name="select_blood_group">Blood group:</string>
-    <!--  -->
     <string name="select_amount">Amount:</string>
-
-    <!--  -->
     <string name="area_name">District</string>
-    <!--  -->
     <string name="mobile_number">Mobile Number</string>
-    <!--  -->
     <string name="full_name">Full Name</string>
-    <!--  -->
     <string name="dummy_full_name">Android System</string>
-    <!--  -->
     <string name="dummy_mobile_number_ID">1*********</string>
-    <!--  -->
-
     <string name="dummy_time">16 January 1993</string>
-    <!--  -->
     <string name="hello_world">Hello world!</string>
-    <!--  -->
     <string name="action_settings">Settings</string>
-    <!--  -->
     <string name="action_delete">Delete</string>
-    <!--  -->
     <string name="action_delete_own">Delete the request</string>
-    <!--  -->
     <string name="action_call">Call:</string>
-    <!--  -->
     <string name="action_sms">Send SMS:</string>
-
-    <!--  -->
     <string name="action_logout">Log Out</string>
-
-    <!--  -->
     <string name="sample_news_feed">Sample News Feed</string>
-    <!--  -->
     <string name="sample_slide_menu">Sample Slide menu</string>
-    <!--  -->
     <string name="sample_slide_menu_land">Sample Slide Menu Land</string>
-    <!--  -->
     <string name="sample_news_feed_land">Sample News Feed land</string>
-    <!--  -->
     <string name="register_sms_one_time">Donate Life checks your mobile number to verify your registration.</string>
-    <!--  -->
     <string name="register_phone_number_code_confirm">Please confirm your country code and enter your phone number</string>
-    <!--  -->
-
     <string name="register_name_confirm">Your Full name:</string>
     <string name="register_password_confirm">Enter a Password:</string>
     <string name="district_confirm">Select where you live.</string>
-
     <string name="blood_group_confirm">Select your Blood Group.</string>
     <string name="blood_feed">Blood Feed</string>
     <string name="blood_request">Request Blood</string>
     <string name="profile">Profile</string>
     <string name="hospital">Hospital</string>
+    <string name="settings">Settings</string>
+    <string name="feedback">Feedback</string>
+    <string name="about_us">About Us</string>
     <string name="loading">Loading...</string>
     <string name="processing">Request on Process...</string>
-    <string name="TimeoutError">Request not proceed.Check your Internet Connection.</string>
-    <string name="NoInternet">Check your Internet connection.</string>
+    <string name="timeout_error">Request not proceed.Check your Internet Connection.</string>
+    <string name="no_internet">Check your Internet connection.</string>
     <string name="availability">Checking Availability...</string>
     <string name="delete_request">Delete Request</string>
     <string name="progressing">Progressing...</string>
-
-
-    <!-- -->
     <string name="title_activity_main">Push Notifications</string>
     <string name="error_config">Please set the %1$s constant and recompile the app.</string>
     <string name="already_registered">Device is already registered on server.</string>
@@ -197,9 +117,6 @@
     <string name="options_unregister">Unregister</string>
     <string name="options_clear">Clear</string>
     <string name="options_exit">Exit</string>
-
-    <!-- -->
-
     <string name="pref_request_feed">Feed Option and Filtering</string>
     <string name="pref_notification">Notification Options</string>
     <string name="pref_key_feed_show_limit">%d request feeds at a time</string>
@@ -214,4 +131,16 @@
     <string name="pref_notification_receive_filter">Receive the notification of blood request</string>
     <string name="pref_notification_vibration">Vibrate on notification receive</string>
     <string name="pref_notification_ringtone">Notification sound</string>
+    <string name="zero_donation_record">No Donation Record Found</string>
+    <string name="one_donation_record">one Time</string>
+    <string name="other_donation_record">%d Times</string>
+    <string name="zero_bag_request"> </string>
+    <string name="one_bag_request">(one Bag)</string>
+    <string name="other_bag_request">(%d Bags)</string>
+    <string name="zero_grammar_error">0 Times</string>
+    <string name="about_version_bulid_code">Version 1.1.1 | build 20141128</string>
+    <string name="about_usage_policy">Donate Life is for personal and non-commercial use only.</string>
+    <string name="about_legal_license">legal information about licenses</string>
+    <string name="name_and_contact">Name and contact</string>
+    <string name="feedback_thank_you">Thank you for your feedback</string>
 </resources>
