--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -11,7 +11,6 @@
     <string name="app_copyright">২০১৪ ব্লু প্যান্ডোরা ইন.</string>
     <string name="app_version_code">ভার্সন ১.১.১</string>
     <string name="emergency_text">জরুরী</string>
-    <string name="emergency_char">E</string>
     <string name="emergency_request">জরুরী সাহায্য</string>
     <string name="emergency_sms">এসএমএস এর মাধ্যম্যে সাহায্য</string>
     <string name="dummy_name">সিস্টেম</string>
@@ -22,7 +21,8 @@
     <string name="log_in">লগ ইন</string>
     <string name="sign_up">সাইন আপ</string>
     <string name="refresh_notice">নিচের দিকে টেনে রিফ্রেশ করুন</string>
-    <string name="request">রক্তের জন্যে আবেদন</string>
+    <string name="request_server">ফিডে আবেদন যুক্ত করুন</string>
+    <string name="request_sms">এসএমএস দ্বারা রক্তের জন্যে আবেদন</string>
     <string name="profile_details">প্রোফাইল এর বর্ণনা</string>
     <string name="profile_edit">সম্পাদনা</string>
     <string name="password_field">সংকেত</string>
@@ -30,13 +30,13 @@
     <string name="Warning_no_number">মোবাইল নম্বর অবশ্যই দিতে হবে</string>
     <string name="Warning_number_short">সঠিক মোবাইল নম্বর অবশ্যই দিতে হবে</string>
     <string name="Warning_select_a_country">একটি দেশ অবশ্যই নির্বাচিত করতে হবে</string>
-    <string name="Warning_enter_a_password">নিবন্ধিত ফোন.সংকেতটি দিন.</string>
-    <string name="Warning_must_enter_a_password">সংকেতটি অবশ্যই দিতে হবে.</string>
-    <string name="Warning_must_enter_a_first_name">You must Enter your First Name.</string>
-    <string name="Warning_must_enter_a_last_name">You must Enter your Last Name.</string>
-    <string name="Warning_password_not_matched">সংকেত মেলে নি।</string>
-    <string name="Warning_wrong_password">সঠিক সংকেতটি দিন।</string>
-    <string name="Warning_remove_the_password">নিবন্ধনের জন্যে সংকেতটি মুছে মেলুন।</string>
+    <string name="Warning_enter_a_password">নিবন্ধিত ফোন.গোপন সংকেতটি দিন.</string>
+    <string name="Warning_must_enter_a_password">গোপন সংকেতটি অবশ্যই দিতে হবে.</string>
+    <string name="Warning_must_enter_a_first_name">আপনাকে অবশ্যই আমার নামের প্রথম অংশটি দিতে হবে।</string>
+    <string name="Warning_must_enter_a_last_name">আপনাকে অবশ্যই আমার নামের শেষ অংশটি দিতে হবে।</string>
+    <string name="Warning_password_not_matched">গোপন সংকেতটি মেলে নি।</string>
+    <string name="Warning_wrong_password">সঠিক গোপন সংকেতটি দিন।</string>
+    <string name="Warning_remove_the_password">নিবন্ধনের জন্যে গোপন সংকেতটি মুছে মেলুন।</string>
     <string name="register_name_info">প্রথম শেষ</string>
     <string name="register_name_last">শেষ নাম</string>
     <string name="register_password">সংকেত</string>
@@ -56,13 +56,13 @@
     <string name="select_amount">পরিমান:</string>
     <string name="area_name">শহর</string>
     <string name="mobile_number">মোবাইল নম্বর</string>
-    <string name="full_name">পুরো নাম</string>
+    <string name="full_name">নাম</string>
     <string name="dummy_full_name">এন্ড্রয়েড সিস্টেম</string>
     <string name="dummy_mobile_number_ID">১*********</string>
     <string name="dummy_time">১৬ জানুয়ারী ১৯৯৩</string>
     <string name="hello_world">স্বাগতম দুনিয়া!</string>
     <string name="action_settings">বিন্যাস</string>
-    <string name="action_delete">বাদ দিন</string>
+    <string name="action_delete">মুছে ফেলুন</string>
     <string name="action_delete_own">অনুরোধটি মুছে মেলুন</string>
     <string name="action_call">কল:</string>
     <string name="action_sms">এসএমএস পাঠান:</string>
@@ -84,13 +84,16 @@
     <string name="settings">সেটিংস</string>
     <string name="feedback">মতামত</string>
     <string name="about_us">আমাদের সম্পর্কে</string>
-    <string name="loading">লোড হচ্ছে...</string>
-    <string name="processing">আবেদনটি করা হচ্ছে...</string>
+    <string name="loading">লোড হচ্ছে&#8230;</string>
+    <string name="processing">আবেদনটি করা হচ্ছে&#8230;</string>
     <string name="timeout_error">আবেদনটি সম্পন্ন হয়নি। আপনার ইন্টারনেট কানেকশনটি পুনরায় দেখুন।</string>
     <string name="no_internet">আপনার ইন্টারনেট সংযোগটি সচল কিনা লক্ষ্য করুন।</string>
-    <string name="availability">আইডি প্রাপ্যতা দেখা হচ্ছে...</string>
+    <string name="availability">আইডি প্রাপ্যতা দেখা হচ্ছ&#8230;</string>
     <string name="delete_request">মুছে ফেলার অনুরোধ</string>
-    <string name="progressing">কাজ হচ্ছে...</string>
+    <string name="progressing">কাজ হচ্ছে&#8230;</string>
+    <string name="pref_language">ভাষা সেটিংস</string>
+    <string name="pref_title_app_language">বাংলা ভাষা</string>
+    <string name="pref_summary_app_language">বাংলা ভাষা বদল করুন</string>
     <string name="pref_request_feed">ফিড অপশন এবং ফিল্টারিং</string>
     <string name="pref_notification">নটিফিকেশন অপশন</string>
     <string name="pref_key_feed_show_limit">%d সংখ্যক ফিড</string>
@@ -111,10 +114,30 @@
     <string name="zero_bag_request"> </string>
     <string name="one_bag_request">(এক ব্যাগ)</string>
     <string name="other_bag_request">(%d ব্যাগ)</string>
+    <string name="zero_donor_title">এই মুহুর্তে কোনো রক্তদাতা নেই</string>
+    <string name="one_donor_title">একজন রকতদাতা পাওয়া গেছে</string>
+    <string name="other_donor_title">মোট %dজন রকতদাতা পাওয়া গেছে</string>
+    <string name="donor_zero_grammar_correct">এই মুহুর্তে কোনো রক্তদাতা নেই</string>
+    <string name="donor_zero_grammar_error">মোট ০জন রকতদাতা পাওয়া গেছে</string>
     <string name="zero_grammar_error">০ বার</string>
     <string name="about_version_bulid_code">ভার্সন ১.১.১ | নির্মান ২০১৪১১২৮</string>
     <string name="about_usage_policy">ডোনেট লাইফ কেবল পার্সোনাল এবং নন-কমার্সিয়াল ব্যবহারের জন্যে।</string>
     <string name="about_legal_license">লাইসেন্সের লিগ্যাল তথ্য</string>
     <string name="name_and_contact">নাম এবং যোগাযোগ</string>
     <string name="feedback_thank_you">আপনার ফিডব্যাকটির জন্যে ধন্যবাদ</string>
+    <string name="already_registered">সার্ভারের সাথে ইতিমধ্যে রেজিস্ট্রেশন করা</string>
+    <string name="title_activity_main">পুশ নোটিফিকেশন</string>
+    <string name="send_feedback">পাঠান</string>
+    <string name="edit_password">এডিট নিশ্চিত এর জন্যে পাসওয়ার্ড </string>
+    <string name="options_clear">ক্লিয়ার</string>
+    <string name="options_exit">বাহির</string>
+    <string name="options_register">নিবন্ধন</string>
+    <string name="options_unregister">রেজিস্টার বাতিল</string>
+    <string name="non_emergency_text"> </string>
+    <string name="refresh">রিফ্রেশ</string>
+    <string name="alert">সতর্ক বাণী!</string>
+    <string name="log_out_message">লগ আউট করা হচ্ছে&#8230;</string>
+    <string name="exit_notice">বাহির হওয়ার জন্যে পুনরায় ব্যাক বাটনটি চাপুন</string>
+    <string name="info">তথ্য</string>
+    <string name="unknown_server_error">কিছু একটা সমস্যা দেখা দিয়েছে&#8230;   কিছুক্ষন পর আবার চেস্টা করুন।</string>
 </resources>
